add more references, move to BibTeX

--- a/report/Makefile
+++ b/report/Makefile
@@ -1,10 +1,15 @@
 LATEX = pdflatex
 
-report.pdf: report.tex
-	@echo "	Running LaTeX"
-	@if $(LATEX) $< | tee /dev/tty | fgrep -is 'Rerun to get'; then 	\
-		echo "	Rerunning LaTeX";			\
-		while $(LATEX) $< | fgrep -is 'Rerun to get'; do    \
-			echo "  Re-Rerunning LaTeX";            \
-		done;                                           \
-	fi
+all: report.pdf
+
+%.pdf %.aux %.bbl: %.tex *.bib
+	$(LATEX) $<
+	bibtex $*
+	$(LATEX) $<
+	while fgrep -is 'Rerun to get' $*.log; do $(LATEX) $<; done
+
+clean:
+	$(RM) *.pdf *.aux *.bbl
+
+.PHONY: all clean
+.DELETE_ON_ERROR:
